feat(#3): change Connection to DataSource, add groupId attribute by EuroCoinCollection, implemented repo pattern for EuroCoinCollection